# mina

./: .gitmodules  build_state_verifier.sh
src/lib/crypto/kimchi_backend/bn254/: bn254_based_plonk.ml
src/lib/crypto/kimchi_bindings/js/: bindings.js
src/lib/crypto/kimchi_bindings/stubs/: Cargo.toml  kimchi_bindings.ml
src/lib/crypto/kimchi_bindings/stubs/src/: bn254_fp_plonk_proof.rs  main.rs
src/lib/crypto/kimchi_bindings/wasm/: Cargo.toml
src/lib/crypto/kimchi_bindings/wasm/src/: bn254_fp_plonk_index.rs  lib.rs  plonk_proof.rs  plonk_verifier_index.rs  srs.rs
src/lib/merkle_root_parser/: .gitignore  dune-project
src/lib/merkle_root_parser/lib/: dune
src/lib/merkle_root_parser/test/: dune
src/lib/mina_block/: mina_block.ml
src/lib/pickles/: compile.ml  dune  pickles.ml  pickles_intf.mli  wrap_main.ml
src/lib/random_oracle/: random_oracle.ml  random_oracle.mli
src/lib/snark_params/: snark_params.ml
src/lib/state_verifier/: dune  state_verifier.ml
