(executable
 (name state_verifier)
 (public_name state_verifier)
 (package state_verifier)
 (preprocess
  (pps ppx_deriving_yojson))
 (libraries
  async
  core_kernel
  core
  stdio
  mina_block
  mina_state
  mina_base
  result
  error_json
  with_hash
  blockchain_snark
  verifier
  logger
  cli_lib
  genesis_constants))
